--- a/src/main/webapp/WEB-INF/templates/players.html
+++ b/src/main/webapp/WEB-INF/templates/players.html
@@ -43,7 +43,7 @@
   </head>
   
   <body>
-	  <nav th:replace="fragments :: nav" class="navbar navbar-default navbar-static-top">
+	  <nav th:replace="fragments :: nav (admin)" class="navbar navbar-default navbar-static-top">
 	    <div class="container">
 	    
 	      <div class="navbar-header">
