--- a/src/main/webapp/WEB-INF/templates/accounts.html
+++ b/src/main/webapp/WEB-INF/templates/accounts.html
@@ -54,22 +54,23 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-id="1" data-name="Andrew" data-balance="10000" th:attr="data-id=${e.key.id},data-name=${e.key.name},data-balance=${e.value}"
-            th:each="e : ${Balances}">
-            <td><a href="transactions.html" th:href="@{/transactions(PlayerId=${e.key.id})}" th:text="${e.key.name}">Test</a></td>
+          <tr data-id="1" data-name="Andrew" data-balance="10000"
+            th:each="e : ${balances}"
+            th:attr="data-id=${e.key.id},data-name=${e.key.name},data-balance=${e.value}">
+            
+            <td><a href="#" th:href="@{/transactions(player-id=${e.key.id})}" th:text="${e.key.name}">Test</a></td>
             <td class="amount" th:text="${#numbers.formatDecimal(e.value/100.0,1,2)}">100.00</td>
             <td></td>
           </tr>
           <tr>
             <td><b>Total</b></td>
-            <td class="amount"><b th:text="${#numbers.formatDecimal(BalanceTotal/100.0,1,2)}">100.00</b></td>
+            <td class="amount"><b th:text="${#numbers.formatDecimal(total/100.0,1,2)}">100.00</b></td>
             <td></td>
           </tr>
         </tbody>
       </table>
       
     </div>
-
     
   </body>
   
