--- a/src/main/webapp/WEB-INF/templates/season.html
+++ b/src/main/webapp/WEB-INF/templates/season.html
@@ -9,9 +9,9 @@
     <title>Season List</title>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="../../js/bootstrap.js" th:src="@{js/bootstrap.js}"></script>
+    <script src="../../js/bootstrap.js" th:src="@{/js/bootstrap.js}"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="../../js/quicksplit.js" th:src="@{js/quicksplit.js}"></script>
+    <script src="../../js/quicksplit.js" th:src="@{/js/quicksplit.js}"></script>
     
     <link type="text/css" rel="stylesheet"
       href="../../css/bootstrap.css" th:href="@{/css/bootstrap.css}">
@@ -22,21 +22,11 @@
       
     <script>
       $(document).ready( function(){
-    	  
-        var bootstrapOptions = {
-          errorElement: "span",
-          errorClass: "help-block",
-          highlight: function(element, errorClass) {
-            $(element).closest( ".form-group" ).addClass( "has-error" );
-          },
-          unhighlight: function(element, errorClass) {
-            $(element).closest( ".form-group" ).removeClass( "has-error" );
-          }
-        };
 
         $( ".modal form" ).each( function(){
           $(this).validate( bootstrapOptions );
-        });      
+        });    
+          
       });
     </script>
     
@@ -67,12 +57,12 @@
           </tr>
         </thead>
         <tbody th:remove="all-but-first">
-          <tr th:each="season : ${Seasons}">
+          <tr th:each="season : ${seasons}">
             <td>
-              <a th:text="${season.id}" th:href="@{/Summary(Season=${season.id})}" href="#">1</a>
+              <a th:text="${season.id}" th:href="@{/summary(season=${season.id})}" href="#">1</a>
             </td>
-            <td th:text="${#dates.format(season.startDate,application.dateFormat)}">Mon, 1 Jan 2016</td>
-            <td th:text="${#dates.format(season.endDate,application.dateFormat)}">Fri, 30 Jun 2016</td>
+            <td th:text="${#dates.format(season.startDate,'EEE, dd MMM yyyy')}">Mon, 1 Jan 2016</td>
+            <td th:text="${#dates.format(season.endDate,'EEE, dd MMM yyyy')}">Fri, 30 Jun 2016</td>
           </tr>
         </tbody>
       </table>
@@ -95,12 +85,12 @@
             </div>
             <div class="modal-body">
               <div class="form-group">
-                <label for="StartDate">Start date</label>
-                <input type="date" required class="form-control" name="StartDate" id="StartDate"/>
+                <label for="start-date">Start date</label>
+                <input type="date" required class="form-control" name="start-date" id="start-date"/>
               </div>
               <div class="form-group">
-                <label for="EndDate">End date</label>
-                <input type="date" required class="form-control" name="EndDate" id="EndDate"/>
+                <label for="end-date">End date</label>
+                <input type="date" required class="form-control" name="end-date" id="end-date"/>
               </div>            
             </div>
             <div class="modal-footer">
