--- a/src/main/webapp/WEB-INF/templates/transactions.html
+++ b/src/main/webapp/WEB-INF/templates/transactions.html
@@ -23,22 +23,17 @@
     <script>
 	    $(document).ready( function(){
 
-        $( "#remove-modal" ).on( "show.bs.modal", function( event ) {
-          var button = $(event.relatedTarget);
-          $(this).find( "#TransactionId" ).val( button.data( "id" ) );
-        });
-        
         $( "form" ).each( function(){
           $(this).validate( bootstrapOptions );
         });
         
-        $( "#Type" ).on( "change", function(e){
+        $( "#type" ).on( "change", function(e){
           var value = $(this).val();
           if( value == "DEPOSIT" ) {
-            $( "#Description" ).val( "Thanks for paying. Better luck next time." );
+            $( "#description" ).val( "Thanks for paying. Better luck next time." );
           }
           else if( value == "WITHDRAWAL" ) {
-            $( "#Description" ).val( "Withdrawal" );
+            $( "#description" ).val( "Withdrawal" );
           }
         });
 	      
@@ -63,7 +58,7 @@
     <div class="row">
       <div class="col-sm-6">
 		    <h3>
-		      Transaction History for <span th:text="${Player.name}">Player</span>
+		      Transaction History for <span th:text="${player.name}">Player</span>
 		    </h3>
       </div>
 
@@ -92,7 +87,7 @@
 			    </tr>
 			  </thead>
 			  <tbody>
-			    <tr th:each="transaction : ${Transactions}">
+			    <tr th:each="transaction : ${transactions}">
 			      <td th:text="${#dates.format(transaction.date,'dd MMM yyyy')}">21 Mar 1986</td>
 			      <td th:text="${transaction.description}">Season #1 loss</td>
 			      <td class="amount" th:text="${#numbers.formatDecimal(transaction.amount/100.0,1,2)}">-25.60</td>
@@ -114,7 +109,7 @@
       <div class="modal-dialog ">
         <div class="modal-content">
           <form th:action="@{/add-transaction}" method="post">
-            <input type="hidden" name="PlayerId" th:value="${Player.id}"/>
+            <input type="hidden" name="player-id" th:value="${player.id}"/>
           
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -123,29 +118,29 @@
             <div class="modal-body">
             
               <div class="form-group">
-                <label for="Date">Date</label>
-                <input type="date" name="Date" id="Date" class="form-control" 
+                <label for="date">Date</label>
+                <input type="date" name="date" id="date" class="form-control" 
                   value="2016-03-21"
                   th:value="${#dates.format(#dates.createToday(),'yyyy-MM-dd')}" required>
               </div>
               <div class="form-group">
-                <label for="Type">Type</label>
-                <select class="form-control" name="Type" id="Type" required>
+                <label for="type">Type</label>
+                <select class="form-control" name="type" id="type" required>
                   <option value=""></option>
                   <option value="DEPOSIT">Deposit</option>
                   <option value="WITHDRAWAL">Withdrawal</option>
                 </select>
               </div>
               <div class="form-group">
-                <label for="Amount">Amount</label>
+                <label for="amount">Amount</label>
                 <div class="input-group">
                   <div class="input-group-addon">$</div>
-                  <input type="number" name="Amount" id="Amount" class="form-control" value="0.00" required min="0">
+                  <input type="number" name="amount" id="amount" class="form-control" value="0.00" required min="0">
                 </div>
               </div>
               <div class="form-group">
-                <label for="Description">Description</label>
-                <textarea name="Description" id="Description" class="form-control" rows="2" required></textarea>
+                <label for="description">Description</label>
+                <textarea name="description" id="description" class="form-control" rows="2" required></textarea>
               </div>
               
             </div>
@@ -157,27 +152,6 @@
       </div>
     </div>
 	  
-    <div class="modal fade" id="remove-modal" tabindex="-1" role="dialog">
-      <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-          <form th:action="@{/remove-transaction}" method="post">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title">Delete Transaction</h4>
-            </div>
-            <div class="modal-body">
-              <input type="hidden" name="TransactionId" id="TransactionId">
-              <p>Are you sure you wish to remove this transaction?</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Nah</button>
-              <button type="submit" class="btn btn-danger btn-sm">Yeah!</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
   </body>
   
 </html>
